<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_tests</name>
  <version>0.2.8</version>
  <description>Clearpath Tests</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <exec_depend>can-utils</exec_depend>
  <exec_depend>clearpath_config</exec_depend>
  <exec_depend>clearpath_generator_common</exec_depend>
  <exec_depend>clearpath_motor_msgs</exec_depend>
  <exec_depend>clearpath_platform_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>simple_term_menu_vendor</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>stress</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>wireless_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
